// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  background: none;
}

.c0:nth-child(2n) {
  background: none;
}

<table>
  <tbody>
    <tr
      class="c0"
      style="color:orange;font-size:16px"
    >
      <td>
        some text1
        <span>
          some text2
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  background: none;
}

.c0:nth-child(2n) {
  background: blue;
}

<Component
  theme={
    Object {
      "yozora": Object {
        "tableRow": Object {
          "evenBackground": "blue",
        },
      },
    }
  }
>
  <table>
    <tbody>
      <YozoraTableRow
        style={
          Object {
            "color": "orange",
            "fontSize": "16px",
          }
        }
      >
        <styled.tr
          style={
            Object {
              "color": "orange",
              "fontSize": "16px",
            }
          }
          theme={
            Object {
              "yozora": Object {
                "tableRow": Object {
                  "background": "none",
                  "evenBackground": "none",
                },
              },
            }
          }
        >
          <tr
            className="c0"
            style={
              Object {
                "color": "orange",
                "fontSize": "16px",
              }
            }
          >
            <td>
              some text1
              <span>
                some text2
              </span>
            </td>
          </tr>
        </styled.tr>
      </YozoraTableRow>
    </tbody>
  </table>
</Component>
`;
